<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".item.ItemDetailsView">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            app:cardCornerRadius="8dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/item_photo"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_android_black_24dp"
                    android:visibility="visible"/>


                <!-- Second ImageView at the bottom -->
                <ImageView
                    android:id="@+id/edit_photo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom|end"
                    android:scaleType="centerCrop"
                    android:src="@drawable/photo_gallery" />
            </FrameLayout>
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="Description"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/description_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:gravity="right"
                android:textSize="20sp"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="Date of Purchase"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/date_of_purchase_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="n/a"
                android:gravity="right"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="Estimated Value"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/estimated_value_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="0.00"
                android:gravity="right"
                android:textSize="20sp"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="Make"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/make_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="n/a"
                android:gravity="right"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="Model"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/model_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="n/a"
                android:gravity="right"
                android:textSize="20sp"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="Serial no."
                android:textSize="20sp" />

            <EditText
                android:id="@+id/serial_no_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="n/a"
                android:gravity="right"
                android:textSize="20sp"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="Tags"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tags_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:drawableRight="@android:drawable/arrow_down_float"
                android:drawablePadding="16dp"
                android:hint="Select Tags"
                android:padding="12dp"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textDirection="rtl"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/item_detail_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/confirm"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/add_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_detail_delete"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    <Button
        android:id="@+id/item_detail_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Delete"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/add_tags"
        app:layout_constraintEnd_toStartOf="@id/item_detail_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    <Button
        android:id="@+id/add_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="Add Tags"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/scan_barcode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_detail_confirm" />

    <Button
        android:id="@+id/add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="Add Photo"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scan_barcode"
        app:layout_constraintTop_toBottomOf="@+id/item_detail_confirm" />

    <Button
        android:id="@+id/scan_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="Scan Code"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_photo"
        app:layout_constraintStart_toEndOf="@+id/add_tags"
        app:layout_constraintTop_toBottomOf="@+id/item_detail_confirm" />


</androidx.constraintlayout.widget.ConstraintLayout>