...

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/recyclerView"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/sort_button"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="wrap_content"
...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Filter"
            android:textSize="18sp" />

        <Button
            android:id="@+id/add_item_button"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Add Item"
            android:textSize="18sp" />
...
